--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@ lesson_2/data/LX_Grad4_2.png
 lesson_2/data/LX_L1.png
 lesson_2/Lesson_2.ipynb
 lesson_2/Lesson_2_script.ipynb
+lesson_4/Lesson_4_script.ipynb
+lesson_4/Lesson_4.ipynb
+lesson_4/data/L4_Q5.png
+lesson_4/data/L4_Q4.png
+lesson_4/data/L4_Q3.png
+lesson_4/data/L4_Q2.png
+lesson_4/data/L4_graphviz.png
+lesson_3/Lesson_3_script.ipynb
+lesson_3/Lesson_3.ipynb
+lesson_3/lesson03.ipynb
+lesson_3/data/L3_logit_example.jpg
+lesson_3/.ipynb_checkpoints/Lesson_3_script-checkpoint.ipynb
+lesson_3/.ipynb_checkpoints/Lesson_3-checkpoint.ipynb
+lesson_3/.ipynb_checkpoints/lesson03-checkpoint.ipynb
+lesson04.mp4
+lesson03.mp4
+homeworks/.ipynb_checkpoints/Lesson03-checkpoint.ipynb
