--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ lesson_3/.ipynb_checkpoints/lesson03-checkpoint.ipynb
 lesson04.mp4
 lesson03.mp4
 homeworks/.ipynb_checkpoints/Lesson03-checkpoint.ipynb
+homeworks/.ipynb
+homeworks/.ipynb_checkpoints/.ipynb-checkpoint
