--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,39 @@ lesson03.mp4
 homeworks/.ipynb_checkpoints/Lesson03-checkpoint.ipynb
 homeworks/.ipynb
 homeworks/.ipynb_checkpoints/.ipynb-checkpoint
+lesson05.mp4
+lesson06.mp4
+lesson_4/.ipynb_checkpoints/lesson04-checkpoint.ipynb
+lesson_4/.ipynb_checkpoints/Lesson_4-checkpoint.ipynb
+lesson_4/.ipynb_checkpoints/Lesson_4_script-checkpoint.ipynb
+lesson_4/.ipynb_checkpoints/Lesson_4_script-Copy1-checkpoint.ipynb
+lesson_4/lesson04.ipynb
+lesson_4/Lesson_4_script-Copy1.ipynb
+lesson_5/data/L5_Bagging.png
+lesson_5/data/L5_Bias_Variance.png
+lesson_5/data/L5_Bootstrap.png
+lesson_5/data/L5_Q1.png
+lesson_5/data/L5_Q2.png
+lesson_5/data/L5_Q3.png
+lesson_5/data/L5_Q4.png
+lesson_5/data/L5_Q5.png
+lesson_5/data/L5_Q6_1.png
+lesson_5/data/L5_Q6_2.png
+lesson_5/data/L5_Q7.png
+lesson_5/data/L5_Q8.png
+lesson_5/data/L5_Random_Forest.png
+lesson_5/data/L5_Random_Subspaces.png
+lesson_5/data/L5_Voting.png
+lesson_5/Lesson_5.ipynb
+lesson_6/data/L6_blending.png
+lesson_6/data/L6_blending_info.png
+lesson_6/data/L6_boostings.png
+lesson_6/data/L6_GM_Class.png
+lesson_6/data/L6_GM_Plots.png
+lesson_6/data/L6_GM_Reg.png
+lesson_6/data/L6_Learning_Curves.png
+lesson_6/data/L6_Q5.png
+lesson_6/data/L6_Q7.png
+lesson_6/data/L6_stacking.png
+lesson_6/data/L6_stacking_info.png
+lesson_6/Lesson_6.ipynb
