--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,12 @@ lesson_6/data/L6_Q7.png
 lesson_6/data/L6_stacking.png
 lesson_6/data/L6_stacking_info.png
 lesson_6/Lesson_6.ipynb
+lesson07.mp4
+lesson_6/.ipynb_checkpoints/lesson06-checkpoint.ipynb
+lesson_6/.ipynb_checkpoints/Lesson_6-checkpoint.ipynb
+lesson_6/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+lesson_6/Untitled.ipynb
+lesson_7/L7_Q2_CM.png
+lesson_7/L7_Q2_KM++.png
+lesson_7/L7_Q3.png
+lesson_7/Lesson_7.ipynb
