--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ lesson_7/L7_Q2_CM.png
 lesson_7/L7_Q2_KM++.png
 lesson_7/L7_Q3.png
 lesson_7/Lesson_7.ipynb
+lesson08.mp4
+lesson_7/.ipynb_checkpoints/lesson07-checkpoint.ipynb
+lesson_7/.ipynb_checkpoints/Lesson_7-checkpoint.ipynb
+lesson_8/.ipynb_checkpoints/Lesson_8-checkpoint.ipynb
+lesson_8/Lesson_8.ipynb
